Cleaned up a bit in the constructors.